# cbrot

./: CMakeLists.txt
src/: input.c  input.h  main.c  mandelbrot.c  mandelbrot.h  mandelbrot_kernel.cl  mandelbrot_opencl_kernels.c  mandelbrot_opencl_kernels.h  render.c  render.h
src/colourmaps/: cividis_lut.h  colourmaps.h  cubehelix_lut.h  hsv_lut.h  inferno_lut.h  magma_lut.h  parula_lut.h  pastel_rainbow_lut.h  plasma_lut.h  turbo_lut.h  viridis_lut.h
